--- a/lms/templates/courseware/course_navigation.html
+++ b/lms/templates/courseware/course_navigation.html
@@ -40,7 +40,8 @@ masquerading_as_student = is_masquerading_as_student(request.user, course.id)
 
 % if disable_tabs is UNDEFINED or not disable_tabs:
     <%
-    tab_list = get_course_tab_list(request.user, course)
+    masquerade_settings = request.session.get('masquerade_settings', None)
+    tab_list = get_course_tab_list(request.user, course, masquerade_settings)
 
     # Record course goals user activity for (web) courseware and course tabs that are outside of the learning mfe
     UserActivity.record_user_activity(user, course.id)
