--- a/cms/templates/widgets/header.html
+++ b/cms/templates/widgets/header.html
@@ -324,7 +324,7 @@
               % if user.is_authenticated:
               <input title="preference api" type="hidden" id="preference-api-url" class="url-endpoint" value="${reverse('preferences_api', kwargs={'username': user.username})}" data-user-is-authenticated="true">
               % else:
-              <input title="session update url" type="hidden" id="update-session-url" class="url-endpoint" value="${reverse('session_language')}" data-user-is-authenticated="false">
+              <input title="session update url" type="hidden" id="update-session-url" class="url-endpoint" value="${reverse('update_language')}" data-user-is-authenticated="false">
               % endif
               <label><span class="sr">${_("Choose Language")}</span>
               <select class="input select language-selector" id="settings-language-value" name="language">
