--- a/cms/templates/container_editor.html
+++ b/cms/templates/container_editor.html
@@ -164,6 +164,12 @@ from openedx.core.djangolib.markup import HTML, Text
                                             <span class="action-button-text">${_("Edit")}</span>
                                         </a>
                                     </li>
+                                    <li class="action-item action-move nav-item">
+                                        <a href="#"  class="button button-move action-button move-button">
+                                            <span class="icon fa fa-pencil" aria-hidden="true"></span>
+                                            <span class="action-button-text">${_("Move")}</span>
+                                        </a>
+                                    </li>
                                 </ul>
                             </nav>
                         </header>
@@ -172,7 +178,11 @@ from openedx.core.djangolib.markup import HTML, Text
                     <script type="text/javascript">
                         $(document).ready(() => {
                             // Serves to initialize the rendering of a xblock edit modal window.
-                            setTimeout(() => $('.button-edit').trigger('click'), 300);
+                            % if action_name == 'edit':
+                                setTimeout(() => $('.button-edit').trigger('click'), 300);
+                            % elif action_name == 'move':
+                                setTimeout(() => $('.button-move').trigger('click'), 300);
+                            % endif
 
                             /**
                              * Callback function for the MutationObserver to handle mutations
