feat: [AXM-361] move JS bridge to separate file

--- a/lms/templates/courseware/courseware-chromeless.html
+++ b/lms/templates/courseware/courseware-chromeless.html
@@ -26,6 +26,9 @@ ${static.get_page_title_breadcrumbs(course_name())}
     <%static:include path="common/templates/${template_name}.underscore" />
 </script>
 % endfor
+% if is_offline_content:
+<script type="text/javascript" src="${static.url('js/courseware/bridge.js')}"></script>
+% endif
 <%
   header_file = None
 %>
@@ -214,65 +217,5 @@ ${HTML(fragment.foot_html())}
       resizeObserver.observe(document.body);
     }
   }());
-</script>
-% endif
-
-% if is_offline_content:
-<script type="text/javascript">
-  function sendMessageToIOS(message) {
-    window?.webkit?.messageHandlers?.IOSBridge?.postMessage(message);
-  }
-
-  function sendMessageToAndroid(message) {
-    window?.AndroidBridge?.postMessage(message);
-  }
-
-  function markProblemCompletedIOS(message) {
-    markProblemCompleted(message);
-  }
-
-  function markProblemCompletedAndroid(message) {
-    markProblemCompleted(message);
-  }
-
-  function markProblemCompleted(message) {
-    const data = JSON.parse(message).data;
-
-    const problem = new Problem($(".xblock-student_view"));
-    problem.submitButton.attr({disabled: "disabled"});
-    problem.gentle_alert("Answer submitted.");
-
-    data.split("&").forEach(function (item) {
-      const [, answer] = item.split('=', 2);
-      problem.el.find('input[id$="' + answer + '"]').each(function () {
-        if (this.type === "checkbox" || this.type === "radio") {
-          this.checked = true;
-        } else {
-          this.value = answer;
-        }
-      })
-    })
-  }
-
-  if (window.webkit && window.webkit.messageHandlers && window.webkit.messageHandlers.IOSBridge) {
-    window.addEventListener("messageFromIOS", function (event) {
-      markProblemCompletedIOS(event.data);
-    });
-  }
-
-  if (window.AndroidBridge) {
-    window.addEventListener("messageFromAndroid", function (event) {
-      markProblemCompletedAndroid(event.data);
-    });
-  }
-
-  const originalAjax = $.ajax;
-  $.ajax = function (options) {
-      if (options.url && options.url.endsWith("problem_check")) {
-        sendMessageToIOS(JSON.stringify(options));
-        sendMessageToAndroid(JSON.stringify(options));
-      }
-    return originalAjax.call(this, options);
-  }
 </script>
 % endif
