--- a/lms/templates/courseware/courseware-chromeless.html
+++ b/lms/templates/courseware/courseware-chromeless.html
@@ -26,6 +26,9 @@ ${static.get_page_title_breadcrumbs(course_name())}
     <%static:include path="common/templates/${template_name}.underscore" />
 </script>
 % endfor
+% if is_offline_content:
+<script type="text/javascript" src="${static.url('js/courseware/bridge.js')}"></script>
+% endif
 <%
   header_file = None
 %>
@@ -214,47 +217,5 @@ ${HTML(fragment.foot_html())}
       resizeObserver.observe(document.body);
     }
   }());
-</script>
-% endif
-
-% if is_offline_content:
-<script type="text/javascript">
-    (function() {
-        function sendMessageToiOS(message) {
-          window?.webkit?.messageHandlers?.iOSBridge?.postMessage(message);
-        }
-
-        function sendMessageToAndroid(message) {
-          window?.AndroidBridge?.postMessage(message);
-        }
-
-        function receiveMessageFromiOS(message) {
-          console.log("Message received from iOS:", message);
-        }
-
-        function receiveMessageFromAndroid(message) {
-          console.log("Message received from Android:", message);
-        }
-
-        if (window.webkit && window.webkit.messageHandlers && window.webkit.messageHandlers.iOSBridge) {
-          window.addEventListener("messageFromiOS", function (event) {
-            receiveMessageFromiOS(event.data);
-          });
-        }
-        if (window.AndroidBridge) {
-          window.addEventListener("messageFromAndroid", function (event) {
-            receiveMessageFromAndroid(event.data);
-          });
-        }
-        const originalAjax = $.ajax;
-        $.ajax = function (options) {
-          sendMessageToiOS(options);
-          sendMessageToiOS(JSON.stringify(options));
-          sendMessageToAndroid(options);
-          sendMessageToAndroid(JSON.stringify(options));
-          console.log(options, JSON.stringify(options));
-          return originalAjax.call(this, options);
-        };
-    }());
 </script>
 % endif
