refactor: transfer logic in backbone

--- a/cms/static/sass/course-unit-mfe-iframe-bundle.scss
+++ b/cms/static/sass/course-unit-mfe-iframe-bundle.scss
@@ -654,3 +654,7 @@ select {
 .wrapper-xblock .xblock-header-primary .header-actions .wrapper-nav-sub {
   z-index: 15;
 }
+
+.wrapper-xblock .ui-loading {
+  display: none !important;
+}
