--- a/cms/djangoapps/import_from_modulestore/templates/admin/custom_course_import_form.html
+++ b/cms/djangoapps/import_from_modulestore/templates/admin/custom_course_import_form.html
@@ -1,6 +1,5 @@
-{% extends "admin/change_form.html" %}
+{% extends "admin/base_site.html" %}
 {% load i18n %}
-
 {% block content %}
 <div id="content-main">
     <form action="" method="POST">
